--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -73,11 +73,11 @@
         </div>
     <!----------CONTACT------------->
 
-        <div class="row" id="contact">
+        <div class="row">
             <div class="column_2 column_tall">
                 <img src="images/pic2.jpg" alt="Meeting">
             </div>
-            <div class="column_1 column_tall">
+            <div class="column_1 column_tall" id="contact">
                 <h1>Contact</h1>
                 <form action="" method="post">
                     <label>Name</label>
