--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width" />
         <script src="KMPortfolio.js"></script>
         <link rel="stylesheet" href="KMPortfolio.css">
+        <link href='https://fonts.googleapis.com/css?family=Cherry Swash' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Bad Script' rel='stylesheet'>
         <title>Kiera Pierson, UX/UI Designer</title>
     </head>
     <body class="background">
@@ -132,7 +134,7 @@
     <!----------CONTACT------------->
 
         <div id="Contact">
-            <button onclick="openForm()" class="Pop_Up_Button">CONTACT</button>
+            <button onclick="openForm()" class="Pop_Up_Button">Contact</button>
             <div class="form-popup" id="myForm">
                 <form action="https://formspree.io/info@learncodinganywhere.com" method="post" class="form-container">
                 <h1>Contact</h1>
