--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -73,8 +73,8 @@
                 </div>
                 <!---Slide 5-->
                 <div class="mySlides fade">
-                    <img class="Slideshow_Images" src="images/python.jpg" alt="Python Logo">
-                    <div class="text">I've worked with Python.</div>
+                    <img class="Slideshow_Images" src="images/Adobe.jpeg" alt="XD/Photoshop Logo">
+                    <div class="text">I've worked with Adobe XD and Photoshop.</div>
                 </div>
                 <!---Slide 6-->
                 <div class="mySlides fade">
@@ -113,7 +113,7 @@
                     I am a former x-ray technologist turned UX/UI Designer. As a mother of two, I enjoy spending time with my daughters 
                     <br>and coaching 3rd grade cheerleading! I am a graduate of 
                     <br><a href="https://www.learncodinganywhere.com/">The Tech Academy</a>. I am a full stack developer and would love to 
-                    <br>work with you on your next project. <a href="#contact">Contact</a> me below! 
+                    <br>create your next project with you. <a href="#contact">Contact</a> me below! 
                 </p>
             </div>
         </div>
@@ -131,12 +131,25 @@
                 <a href="https://github.com/KMPierson/HTML-CSS-Projects.git" target="_blank"><img src="images/github.jpg" alt="GitHub Logo"></a>
             </div>
         </div>
+
+    <!----Dribble----->
+        <div class="row" id="dribble">
+            <div class="column_2">
+                <a href="https://dribbble.com/KMPierson" target="_blank"><img src="images/Dribbble_logo.png" alt="Dribbble Logo"></a>
+            </div>
+            <div class="column_1">
+                <h1>Dribbble</h1>
+                <p>You can view my design projects on my Dribbble account here:</p>
+                <br>
+                <p class="center"><a href="https://dribbble.com/KMPierson" target="new">K.Pierson Dribbble</a></p>
+            </div>
+        </div>
     <!----------CONTACT------------->
 
         <div id="Contact">
             <button onclick="openForm()" class="Pop_Up_Button">Contact</button>
             <div class="form-popup" id="myForm">
-                <form action="https://formspree.io/info@learncodinganywhere.com" method="post" class="form-container">
+                <form action="https://formspree.io/f/mlezapog" method="post" class="form-container">
                 <h1>Contact</h1>
                     <label for="name"><b>Name</b></label>
                         <input type="text" placeholder="Please enter your name" name="name" required>
