--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <!---Slide 5-->
                 <div class="mySlides fade">
-                    <img class="Slideshow_Images" src="images/Adobe.jpeg" alt="XD/Photoshop Logo">
+                    <img class="Slideshow_Images" src="images/XDPS.jpg" alt="XD/Photoshop Logo">
                     <div class="text">I've worked with Adobe XD and Photoshop.</div>
                 </div>
                 <!---Slide 6-->
